xxl-job-admin/xxl-job-admin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: xxl-job-admin
  namespace: xxl-job
  labels:
    app: xxl-job-admin
    version: v1
spec:
  selector:
    matchLabels:
      app: xxl-job-admin
      version: v1
  template:
    metadata:
      name: xxl-job-admin
      labels:
        app: xxl-job-admin
        version: v1
    spec:
      volumes:
      - name: admin-config
        configMap:
          defaultMode: 0640
          name: xxl-job-admin-config
          
      imagePullSecrets:           
        - name: harborsecret
      containers:
        - name: xxl-job-admin
          image: harbor.huaweicloud.com/test-env/xxl-job-admin:v70
          volumeMounts:
          - mountPath: /home/application.properties
            name: admin-config
            subPath: application.properties
          resources:               
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 2
              memory: 1024Mi
          imagePullPolicy: IfNotPresent
          
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10 
            timeoutSeconds: 3        
            periodSeconds: 30        
            successThreshold: 1      
            failureThreshold: 3     
          readinessProbe:            
            tcpSocket:
              port: 80
            initialDelaySeconds: 10  
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1      
            failureThreshold: 3      
          securityContext:
            privileged: false    
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
