xxl-job-admin/xxl-job-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xxl-job-admin
  namespace: xxl-job
spec:
  rules:
  - host: xxl-job.huaweicloud.com
    http:
      paths:
      - backend:
          serviceName: xxl-job-admin
          servicePort: 80
